# ikin-stock-scrapper

./: .gitignore  BUILD_EXECUTABLES.md  CHANGELOG.md  CLAUDE.md  CLI_COMPLETION.md  CONTRIBUTING.md  EXECUTABLE_IMPLEMENTATION.md  LICENSE  Makefile  README.md  RELEASE_NOTES_v2.1.0.md  SETUP.md  WORKFLOW_FIX.md  batchFile.py  build_executable.py  examine_pdf.py  pse-scraper.spec  pyproject.toml  pytest.ini  release.py  run_batchFile.bat  run_tests.py
.github/: README.md
.github/workflows/: build-executables.yml  ci.yml  dependencies.yml  release.yml  test-build.yml
docs/share-buy-back/: FEATURE_SPEC.md  IMPLEMENTATION_PLAN.md  README.md  share_buyback_prd.md  share_buyback_requirements.md  share_buyback_tdd.md  share_buyback_uxd.md
docs/share-buy-back/uat_1_2025_06_07/: UAT_SUMMARY.md  chat.md
docs/share-buy-back/uat_2_2025_07_07/: REQUIREMENTS.md  chat.md
docs/share-buy-back/uat_3_2025_07_12/: IMPLEMENTATION_PLAN.md  REQUIREMENTS.md
examples/: README.md  advanced_usage.py  basic_usage.py  batch_scraping.py
src/pse_scraper/: __init__.py  __main__.py  cli.py  cli_click.py
src/pse_scraper/core/: __init__.py
src/pse_scraper/core/processors/: __init__.py  annual_report.py  cash_dividends.py  public_ownership.py  quarterly_report.py  share_buyback.py  share_buyback_refined.py  stockholders.py
src/pse_scraper/models/: __init__.py  report_types.py
src/pse_scraper/utils/: __init__.py  console.py  http_client.py  logging_config.py
test_outputs/: FINAL_TEST_SUMMARY.md  FINAL_UI_IMPROVEMENTS.md  SYMBOL_IMPLEMENTATION_SUMMARY.md
tests/: README.md  conftest.py  mock_data.py  test_integration.py  test_models.py  test_processors.py  test_scraper.py  test_simple.py  test_utils.py
