[tool.poetry]
name = "pse-scraper"
version = "2.0.0"
description = "A modern, modular scraper to gather data about cash dividends, top 100 stockholders, annual reports, quarterly reports, and public ownership reports from edge.pse.com.ph"
authors = ["Muhammad Zahid Masruri <masruri03@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/masrurimz/pse-scraper"
repository = "https://github.com/masrurimz/pse-scraper"
keywords = ["pse", "scraper", "philippines", "stock", "exchange", "financial", "data"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content"
]
packages = [{ include = "pse_scraper", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.0"
html5lib = "^1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"
pytest-cov = "^6.1.1"
pytest-mock = "^3.14.1"

[tool.poetry.scripts]
pse-scraper = "pse_scraper.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
